Fixed the line spacing of the paragraphs

--- a/styles/mainStyles.css
+++ b/styles/mainStyles.css
@@ -10,6 +10,7 @@ body {
 
 p{
     word-spacing: 1px;
+    line-height: 1.5em;
     font-size: 15px;
 }
 
